Search bar in every page

--- a/src/components/Navbar/style.css
+++ b/src/components/Navbar/style.css
@@ -2,7 +2,7 @@
   height: 10vh;
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: flex-end;
   position: sticky;
   background-color: white;
   z-index: 50;
