--- a/src/components/Table/HostFeedbackTable/style.css
+++ b/src/components/Table/HostFeedbackTable/style.css
@@ -1,10 +1,11 @@
 .host__feedback__container {
-  padding: 3rem 0;
+  padding: 1rem 0;
 }
 
 .host__feedback__table__container {
-  width: 100%;
+  width: max-content;
   border-collapse: collapse;
+  min-width: 100%;
 }
 
 .host__feedback__table__heading {
@@ -20,7 +21,6 @@
   border: none;
   border-bottom: 1px solid grey;
   font-family: var(--fontfamily-sansserif);
-
   padding: 10px 5px;
 }
 
@@ -30,4 +30,9 @@
 .host__feedback__eye__icon {
   font-size: 20px;
   cursor: pointer;
+}
+
+.table_parent_box {
+  width: 100%;
+  overflow-x: auto;
 }
