--- a/src/components/Table/LeaderTable/style.css
+++ b/src/components/Table/LeaderTable/style.css
@@ -1,9 +1,12 @@
 .leader__table__container {
-  padding: 3rem 0;
+  padding: 1rem 0;
+  width: 100%;
+  overflow-x: auto;
 }
 
 .leader__table {
-  width: 100%;
+  max-width: max-content;
+  min-width: 100%;
   border-collapse: collapse;
 }
 
