--- a/src/App.css
+++ b/src/App.css
@@ -27,10 +27,11 @@
   --fontweight-light: 300;
 
   --color-pink: #f20094;
-  --color-grey: #ccc;
+  --color-grey: #a9a9a9;
   --color-white: #fff;
   --color-black: #000;
   --color-red: #ff0000;
+
   --color-lightpink: #ffdff3;
 
   --button-height: 50px;
