--- a/src/components/Sidebar/style.css
+++ b/src/components/Sidebar/style.css
@@ -1,5 +1,4 @@
 .sidebar__content_container {
-  height: auto;
   background-color: #f20094;
   border-right: 12px solid #ff65c4;
   box-shadow: 10px 0 #ff9eda;
@@ -8,6 +7,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  height: 100vh;
+  overflow: auto;
 }
 
 .contentOpen {
