--- a/src/components/Table/WarnedUserTable/style.css
+++ b/src/components/Table/WarnedUserTable/style.css
@@ -1,9 +1,10 @@
 .warned__user__container {
-  padding: 3rem 0;
+  padding: 1rem 0;
 }
 
 .warned__user__table {
-  width: 100%;
+  max-width: fit-content;
+  min-width: 100%;
   border-collapse: collapse;
 }
 
