Applied No data found gif on every page

--- a/src/components/Table/UserBlockList/style.css
+++ b/src/components/Table/UserBlockList/style.css
@@ -22,3 +22,7 @@
   font-family: var(--fontfamily-sansserif);
   border-bottom: 1px solid grey;
 }
+
+.block_no__data__found__icon {
+  text-align: center;
+}
