--- a/src/components/formComponents/NotificationForm/style.css
+++ b/src/components/formComponents/NotificationForm/style.css
@@ -1,4 +1,4 @@
-.notification__form__container {
+/* .notification__form__container {
   padding: 2px 0;
 }
 
@@ -13,4 +13,4 @@
   border-bottom: 1px solid black;
   font-family: var(--fontfamily-sansserif);
   font-weight: var(--fontweight-medium);
-}
+} */
