--- a/src/App.css
+++ b/src/App.css
@@ -31,6 +31,7 @@
   --color-white: #fff;
   --color-black: #000;
   --color-red: #ff0000;
+  --color-blue: #0077ff;
 
   --color-lightpink: #ffdff3;
 
