--- a/src/components/Sidebar/style.css
+++ b/src/components/Sidebar/style.css
@@ -7,8 +7,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  height: 100vh;
-  overflow: auto;
+  height: auto;
 }
 
 .contentOpen {
