--- a/src/components/Table/HostFeedbackTable/style.css
+++ b/src/components/Table/HostFeedbackTable/style.css
@@ -8,6 +8,14 @@
   min-width: 100%;
 }
 
+.host__feedback__comment {
+  white-space: nowrap;
+  width: 100px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  cursor: pointer;
+}
+
 .host__feedback__table__heading {
   padding: 10px;
   background-color: var(--color-pink);
