--- a/src/components/Table/UserRequestTable/style.css
+++ b/src/components/Table/UserRequestTable/style.css
@@ -17,13 +17,15 @@
   padding: 10px;
   font-weight: var(--fontweight-medium);
   font-family: var(--fontfamily-sansserif);
+  font-size: var(--fontsize-small);
   background-color: var(--color-pink);
 }
 
 .user__request__data {
   text-align: center;
-  padding: 10px 5px;
+  padding: 5px 5px;
   font-family: var(--fontfamily-sansserif);
+  font-size: var(--fontsize-small);
 
   border: none;
   border-bottom: 1px solid grey;
