--- a/src/components/WebModal/style.css
+++ b/src/components/WebModal/style.css
@@ -5,27 +5,30 @@
   width: 100%;
   height: 100%;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   background-color: rgba(0, 0, 0, 0.183);
   z-index: 10000000;
 }
 
+.web_modal_data {
+  background-color: var(--color-white);
+  border-radius: 10px;
+}
+
 .web__modal__heading {
   border: none;
   border-bottom: 1px solid grey;
+  font-family: var(--fontfamily-sansserif);
+  font-weight: var(--fontweight-medium);
+  text-align: center;
 }
 
 .web__modal__content {
   background-color: var(--color-white);
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  align-items: center;
-  width: 25rem;
-  height: auto;
   padding: 1rem;
-  font-weight: var(--fontweight-medium);
   border-radius: 10px;
+  font-weight: var(--fontweight-regular);
   font-family: var(--fontfamily-sansserif);
 }
