--- a/src/components/Table/UserRequestTable/style.css
+++ b/src/components/Table/UserRequestTable/style.css
@@ -1,7 +1,7 @@
 .user__request__table__container {
   width: 100%;
   height: 100%;
-  padding: 3rem 0;
+  padding: 0.5rem 0;
   overflow: auto;
 }
 
@@ -58,4 +58,10 @@
 
 .user__management__view__btn {
   cursor: pointer;
+}
+
+.user__request__btn__container {
+  display: flex;
+  justify-content: flex-end;
+  margin-bottom: 1rem;
 }
