--- a/src/pages/Coin/style.css
+++ b/src/pages/Coin/style.css
@@ -39,6 +39,11 @@
   cursor: pointer;
 }
 
+.wallet__eye__icon {
+  font-size: var(--fontsize-medium);
+  cursor: pointer;
+}
+
 .add__wallet {
   display: flex;
   justify-content: flex-end;
