--- a/src/components/Table/StickerTable/style.css
+++ b/src/components/Table/StickerTable/style.css
@@ -19,7 +19,7 @@
 .sticker__table__data {
   text-align: center;
   padding: 10px 0;
-  font-family: var(--fontfamily-sansserif);
+  font-family: var(--fontfamily-default);
 
   border: none;
   border-bottom: 1px solid grey;
