--- a/src/components/Table/UserGiftTable/style.css
+++ b/src/components/Table/UserGiftTable/style.css
@@ -18,8 +18,7 @@
 .user__gift__data {
   text-align: center;
   padding: 10px;
-  border: none;
-  font-family: var(--fontfamily-sansserif);
+  font-family: var(--fontfamily-default);
   border-bottom: 1px solid grey;
 }
 
