--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,400;1,500&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,400&display=swap");
+/* @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,400&display=swap"); */
 
 * {
   margin: 0;
@@ -8,7 +8,8 @@
 }
 
 :root {
-  --fontfamily-sansserif: "Poppins", sans-serif;
+  --fontfamily-sansserif: "Roboto", sans-serif;
+  --fontfamily-default: arial, sans-serif;
   /* --fontfamily-serif: "Lora", serif; */
   /* --fontfamily-cursive: "Dancing Script", cursive; */
 
