--- a/src/components/Navbar/style.css
+++ b/src/components/Navbar/style.css
@@ -45,7 +45,7 @@
 
 .navbar__details {
   color: #f20094;
-  font-family: var(--fontfamily-sansserif);
+  font-family: var(--fontfamily-default);
 }
 
 .admin__image {
