--- a/src/components/PopUpMenu/style.css
+++ b/src/components/PopUpMenu/style.css
@@ -19,7 +19,7 @@
 }
 
 .popup_text p {
-  font-family: var(--fontfamily-sansserif);
+  font-family: var(--fontfamily-default);
   border-bottom: 1px solid black;
   cursor: pointer;
   padding: 0.5rem 2rem;
