--- a/src/components/Table/CallHistoryTable/style.css
+++ b/src/components/Table/CallHistoryTable/style.css
@@ -21,7 +21,7 @@
   padding: 10px 5px;
   border: none;
   border-bottom: 1px solid grey;
-  font-family: var(--fontfamily-sansserif);
+  font-family: var(--fontfamily-default);
 }
 
 .user__random__call {
