--- a/src/components/Table/EarningTable/style.css
+++ b/src/components/Table/EarningTable/style.css
@@ -18,7 +18,7 @@
 
 .earnings__table__data {
   text-align: center;
-  font-family: var(--fontfamily-sansserif);
+  font-family: var(--fontfamily-default);
   border-bottom: 1px solid black;
   padding: 10px 5px;
 }
