--- a/src/components/Table/FeedbackTable/style.css
+++ b/src/components/Table/FeedbackTable/style.css
@@ -29,7 +29,7 @@
   text-align: center;
   border: none;
   border-bottom: 1px solid grey;
-  font-family: var(--fontfamily-sansserif);
+  font-family: var(--fontfamily-default);
 }
 
 .feedback__table__eye__icon {
