--- a/src/components/Table/FollowingTable/style.css
+++ b/src/components/Table/FollowingTable/style.css
@@ -16,7 +16,7 @@
 }
 
 .following__data {
-  font-family: var(--fontfamily-sansserif);
+  font-family: var(--fontfamily-default);
   text-align: center;
   padding: 10px;
   border: none;
