--- a/src/components/Table/GiftTable/style.css
+++ b/src/components/Table/GiftTable/style.css
@@ -19,7 +19,7 @@
 .gift__table__body {
   text-align: center;
   padding: 10px 5px;
-  font-family: var(--fontfamily-sansserif);
+  font-family: var(--fontfamily-default);
   font-size: var(--fontsize--small);
   border: none;
   border-bottom: 1px solid grey;
