--- a/src/components/Table/HostBlockTable/style.css
+++ b/src/components/Table/HostBlockTable/style.css
@@ -17,7 +17,7 @@
 
 .host__block__data {
   text-align: center;
-  font-family: var(--fontfamily-sansserif);
+  font-family: var(--fontfamily-default);
   border: none;
   border-bottom: 1px solid black;
   padding: 10px;
