--- a/src/components/Table/HostFeedbackTable/style.css
+++ b/src/components/Table/HostFeedbackTable/style.css
@@ -28,7 +28,7 @@
   text-align: center;
   border: none;
   border-bottom: 1px solid grey;
-  font-family: var(--fontfamily-sansserif);
+  font-family: var(--fontfamily-default);
   padding: 10px 5px;
 }
 
