--- a/src/components/Table/HostFollowingTable/style.css
+++ b/src/components/Table/HostFollowingTable/style.css
@@ -19,6 +19,6 @@
   text-align: center;
   padding: 10px 5px;
   border: none;
-  font-family: var(--fontfamily-sansserif);
+  font-family: var(--fontfamily-default);
   border-bottom: 1px solid grey;
 }
