--- a/src/components/Table/HostGiftTable/style.css
+++ b/src/components/Table/HostGiftTable/style.css
@@ -19,7 +19,7 @@
   text-align: center;
   padding: 10px;
   border: none;
-  font-family: var(--fontfamily-sansserif);
+  font-family: var(--fontfamily-default);
   border-bottom: 1px solid grey;
 }
 
