--- a/src/components/Table/HostManagementTable/style.css
+++ b/src/components/Table/HostManagementTable/style.css
@@ -24,5 +24,5 @@
 .host__management__data {
   display: flex;
   gap: 10px;
-  font-family: var(--fontfamily-sansserif);
+  font-family: var(--fontfamily-default);
 }
