--- a/src/components/Table/InterestTable/style.css
+++ b/src/components/Table/InterestTable/style.css
@@ -19,7 +19,7 @@
 
 .interest__data {
   text-align: center;
-  font-family: var(--fontfamily-sansserif);
+  font-family: var(--fontfamily-default);
   font-size: var(--fontsize-small);
   /* font-weight: var(--fontweight-medium); */
   border-bottom: 1px solid black;
