--- a/src/components/Table/MomentTable/style.css
+++ b/src/components/Table/MomentTable/style.css
@@ -18,7 +18,7 @@
 
 .moment__table__body {
   text-align: center;
-  font-family: var(--fontfamily-sansserif);
+  font-family: var(--fontfamily-default);
   border: none;
   border-bottom: 1px solid grey;
   padding: 5px 0;
