--- a/src/components/Table/NotificationTable/style.css
+++ b/src/components/Table/NotificationTable/style.css
@@ -18,7 +18,7 @@
 .notification__table__data {
   text-align: center;
   padding: 10px;
-  font-family: var(--fontfamily-sansserif);
+  font-family: var(--fontfamily-default);
   border: none;
   border-bottom: 1px solid grey;
 }
