--- a/src/components/Table/PaymentHistoryTable/style.css
+++ b/src/components/Table/PaymentHistoryTable/style.css
@@ -21,7 +21,7 @@
   border: none;
   border-bottom: 1px solid grey;
   padding: 10px;
-  font-family: var(--fontfamily-sansserif);
+  font-family: var(--fontfamily-default);
 }
 
 .payment__no__data {
