--- a/src/components/Table/RejectedHostTable/style.css
+++ b/src/components/Table/RejectedHostTable/style.css
@@ -13,7 +13,7 @@
   padding: 10px 5px;
   border: none;
   border-bottom: 1px solid grey;
-  font-family: var(--fontfamily-sansserif);
+  font-family: var(--fontfamily-default);
   text-align: center;
 }
 
