--- a/src/components/Table/SubAdminTable/style.css
+++ b/src/components/Table/SubAdminTable/style.css
@@ -21,7 +21,7 @@
   text-align: center;
   padding: 0.5rem 0;
   border-bottom: 1px solid black;
-  font-family: var(--fontfamily-sansserif);
+  font-family: var(--fontfamily-default);
   font-size: var(--fontsize-small);
   font-weight: var(--fontweight-regular);
 }
