--- a/src/components/Table/SuspendedUserTable/style.css
+++ b/src/components/Table/SuspendedUserTable/style.css
@@ -18,7 +18,7 @@
 
 .suspended__table__data {
   text-align: center;
-  font-family: var(--fontfamily-sansserif);
+  font-family: var(--fontfamily-default);
   padding: 5px 0;
   border: none;
   border-bottom: 1px solid grey;
