--- a/src/components/Table/UserBlockList/style.css
+++ b/src/components/Table/UserBlockList/style.css
@@ -20,7 +20,7 @@
   text-align: center;
   padding: 10px 0;
   border: none;
-  font-family: var(--fontfamily-sansserif);
+  font-family: var(--fontfamily-default);
   border-bottom: 1px solid grey;
 }
 
