--- a/src/components/Table/UserReportTable/style.css
+++ b/src/components/Table/UserReportTable/style.css
@@ -18,7 +18,7 @@
 
 .user__report__data {
   text-align: center;
-  font-family: var(--fontfamily-sansserif);
+  font-family: var(--fontfamily-default);
   padding: 10px 5px;
   border: none;
   border-bottom: 1px solid grey;
