--- a/src/components/Table/WarnedHostTable/style.css
+++ b/src/components/Table/WarnedHostTable/style.css
@@ -19,7 +19,7 @@
 .warned__host__data {
   text-align: center;
   padding: 5px 0;
-  font-family: var(--fontfamily-sansserif);
+  font-family: var(--fontfamily-default);
 
   border: none;
   border-bottom: 1px solid grey;
