--- a/src/components/Table/WarnedUserTable/style.css
+++ b/src/components/Table/WarnedUserTable/style.css
@@ -21,7 +21,7 @@
   text-align: center;
   padding: 5px 0;
   border: none;
-  font-family: var(--fontfamily-sansserif);
+  font-family: var(--fontfamily-default);
   border-bottom: 1px solid grey;
 }
 
