--- a/src/pages/ActiveUser/style.css
+++ b/src/pages/ActiveUser/style.css
@@ -18,15 +18,15 @@
   background-color: var(--color-pink);
   color: var(--color-white);
   font-family: var(--fontfamily-sansserif);
-  font-size: var(--fontsize-regular);
+  /* font-size: var(--fontsize-regular); */
   font-weight: var(--fontweight-medium);
-  padding: 0.3rem 0;
+  padding: 0.5rem 5px;
 }
 
 .active__user__data {
   text-align: center;
-  font-family: var(--fontfamily-sansserif);
-  font-size: var(--fontsize-regular);
+  font-family: var(--fontfamily-default);
+  /* font-size: var(--fontsize-regular); */
   border-bottom: 1px solid black;
-  padding: 0.2rem 0;
+  padding: 0.5rem 5px;
 }
