--- a/src/App.css
+++ b/src/App.css
@@ -31,7 +31,7 @@
   --color-grey: #a9a9a9;
   --color-white: #fff;
   --color-black: #000;
-  --color-red: #ff0000;
+  --color-red: #ec1010;
   --color-blue: #0077ff;
 
   --color-lightpink: #ffdff3;
