--- a/src/components/Sidebar/style.css
+++ b/src/components/Sidebar/style.css
@@ -7,7 +7,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  height: auto;
+  height: 100vh;
+  overflow-y: scroll;
 }
 
 .contentOpen {
