--- a/src/pages/EnterOtp/OtpField/style.css
+++ b/src/pages/EnterOtp/OtpField/style.css
@@ -1,9 +1,10 @@
 .otp__field {
-  width: 3rem;
-  height: 3rem;
   border: none;
   outline: none;
   border-bottom: 2px solid #f20094;
   font-size: 30px;
   text-align: center;
+
+  width: 40px;
+  height: 40px;
 }
