--- a/src/pages/EnterOtp/style.css
+++ b/src/pages/EnterOtp/style.css
@@ -3,6 +3,12 @@
   gap: 20px;
 }
 
+.login__otp_field input {
+  height: 40px;
+  width: 40px;
+  text-align: center;
+}
+
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
   display: none;
