fixed bugs and worked on updates

--- a/src/App.css
+++ b/src/App.css
@@ -29,6 +29,7 @@
 
   --color-pink: #f20094;
   --color-grey: #a9a9a9;
+  --color-lightgrey: #ebebeb;
   --color-white: #fff;
   --color-black: #000;
   --color-red: #ec1010;
