--- a/src/components/Navbar/style.css
+++ b/src/components/Navbar/style.css
@@ -1,5 +1,5 @@
 .navbar__container {
-  height: 10vh;
+  height: 60px;
   display: flex;
   align-items: center;
   justify-content: flex-end;
@@ -7,19 +7,7 @@
   background-color: white;
   z-index: 50;
   top: 0;
-}
-
-.navbar__search_bar {
-  width: 50vw;
-}
-
-.search__input {
-  margin-left: 15px;
-  border: none;
-  outline: none;
-  width: 20rem;
-  height: 2.5rem;
-  border-radius: 15rem;
+  margin: 10px 0 1rem 0;
 }
 
 .navbar__country {
@@ -34,13 +22,17 @@
 }
 
 .navbar__profile_details {
+  width: 100%;
   display: flex;
   align-items: center;
-  gap: 20px;
+  justify-content: space-between;
 }
 
-.navbar__content {
-  text-align: end;
+.navbar_right_content {
+  width: 250px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .navbar__details {
